Add full game, winner first to 5
Adds full game for winner first to 5, GUI announcing
the winner and score, and a game reset button.

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
   <button>Paper</button>
   <button>Scissors</button>
   <div class="results"></div>
+  <div class="player-score">Player Score: 0</div>
+  <div class="cpu-score">CPU Score: 0</div>
+  <div class="final-results"></div>
 </body>
 </html>
